--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Outfit:wght@500;600;700&display=swap" rel="stylesheet">
 
+    <!-- === MARKDOWN & HIGHLIGHTING === -->
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/dracula.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
+
     <!-- === NEW MATHJAX SCRIPT === -->
     <!-- This library will render the math formulas -->
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
